fix: overlap at modal when on high resolution screens

--- a/src/components/modal-wrapper/styles.css
+++ b/src/components/modal-wrapper/styles.css
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100%;
   max-width: 420px;
   min-height: 100vh;
   background-color: #513d24;
@@ -28,7 +29,7 @@
 .modal-content--wrapper {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   color: #fff;
   padding: 24px;
